--- a/public/stylesheets/sass/modules/_global.scss
+++ b/public/stylesheets/sass/modules/_global.scss
@@ -16,6 +16,10 @@ body {
         z-index: -1;
         opacity: 0.96;
     }
+
+    &.fixed {
+        overflow: hidden;
+    }
 }
 
 .deloitte-logo {
